--- a/app.yml
+++ b/app.yml
@@ -3,11 +3,5 @@ api_version: 1
 
 handlers:
 # Serve images as static resources.
-- url: /(.+\.(gif|png|jpg))$
-  static_files: \1
-  upload: .+\.(gif|png|jpg)$
-  application_readable: true
-
-# Serve php scripts.
-- url: /(.+\.php)$
-  script: \1
+- url: /.*
+  script: index.php
